load header css with app.css

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,3 +1,11 @@
+.main-header {
+  padding: 5rem 0 2rem 0;
+}
+
+.logo {
+  height: 30vh;
+}
+
 .button.is-primary {
   background-color: #a3001f;
 }
